--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rbedic"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Ivan Dzhonev <ivan.dzhonev at gmail.com>"]
 
 [dependencies]
@@ -12,3 +12,6 @@ env_logger = "0.3"
 
 lazy_static = "1"
 regex = "0.2"
+
+clap = "~2.33.0"
+dirs = "2.0.2"
